--- a/frontend/frontend/static/css/index.css
+++ b/frontend/frontend/static/css/index.css
@@ -112,7 +112,7 @@ body{ background-color: white;
 	  white-space: normal;
   }
   
-  .toggle{
+  /* .toggle{
 	  position: fixed;
 	  top: 20px;
 	  right: 20px;
@@ -147,7 +147,7 @@ body{ background-color: white;
   .toggle.active ion-icon.open
   {
 	  display: none;
-  }
+  } */
   .box{
     position: fixed;
     top: 90px;
@@ -241,4 +241,22 @@ body{ background-color: white;
 	position: fixed;
 	font-size: 30px;
 	
+}
+.login{
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	width: 50px;
+	height: 50px;
+	background: rgb(19, 233, 151);
+	border-radius: 10px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.login ion-icon{
+	position: absolute;
+	color:black ;   
+	font-size: 34px;
 }
