--- a/frontend/frontend/static/css/index.css
+++ b/frontend/frontend/static/css/index.css
@@ -260,26 +260,27 @@ body{ background-color: white;
 	color:black ;   
 	font-size: 34px;
 }
-.chess{
-	position: fixed;
-	top: 100px;
-	border: 1px solid rgb(16, 223, 44);
-  border-radius: 4px;
-  padding: 5px;
-  width: 150px;
-	
+.container{
+	background-image: 100%;
+    display: inline-flex;
+	justify-content: center;
+	text-align: center;
+	margin-top: 150px;
+	/* height: 100px; */
+	width: 100%;
 }
-.ludo{
-	position: absolute;
-	top: 100px;
-	left: 650px;
-	
+.container img{
+	width: 350px;
+	height: 300px;
 }
-.scribble{
-	position: fixed;
-	top: 100px;
-	left: 1000px;
-	border-image: round;
-	size: 1px;
+.container > div{
+	margin: 0 1.5%;
+	width: 30%;
 
 }
+.container > div:hover{
+	padding-top: 20px;
+	transition: 0.5s;
+
+}
+
