--- a/frontend/frontend/static/css/index.css
+++ b/frontend/frontend/static/css/index.css
@@ -276,8 +276,11 @@ body{ background-color: white;
 	width: 100%;
 }
 .container img{
+	border-radius: 10%;
 	width: 350px;
 	height: 300px;
+	border: 10px solid rgb(240, 119, 7);
+    padding: 15px;
 }
 .container > div{
 	margin: 0 1.5%;
@@ -285,7 +288,7 @@ body{ background-color: white;
 
 }
 .container > div:hover{
-	padding-top: 20px;
+	box-shadow: 10px 10px 20px lightblue;
 	transition: 0.5s;
 
 }
