--- a/frontend/frontend/static/ludo/ludo.css
+++ b/frontend/frontend/static/ludo/ludo.css
@@ -92,3 +92,41 @@ body{
     border-left: 60px solid red;
     border-right: 60px solid yellow;
 }
+
+
+
+.container
+{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    /* position: fixed;
+width: 100px;
+height: 100px;
+margin-left: calc(50% - 50px);
+margin-top: calc(50% - 50px);
+z-index: 100; */
+}
+
+#img
+{
+    width: 150px;
+    height: 150px;
+}
+
+.btn
+{
+    width: 150px;
+    height: 40px;
+    margin: 20px;
+    font-size: 1.2rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
