--- a/frontend/frontend/static/ludo/ludo.css
+++ b/frontend/frontend/static/ludo/ludo.css
@@ -93,22 +93,18 @@ body{
     border-right: 60px solid yellow;
 }
 
-
-
-.container
-{
-    width: 100%;
-    height: 100vh;
+.container{
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    align-items:center;
-    /* position: fixed;
-width: 100px;
-height: 100px;
-margin-left: calc(50% - 50px);
-margin-top: calc(50% - 50px);
-z-index: 100; */
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    background: purple;
+    margin-left: calc(50% - 90px);
+    margin-top: 250px;
 }
 
 #img
